--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -20,8 +20,13 @@
   }
   
   .social_list svg {
-    font-size: 1.5em;
+    font-size: 2.3em;
     cursor: pointer;
+    color: white;
+  }
+
+  .social_list svg:hover {
+    color: #ffbb33;
   }
   
   .copy_right {
